[WIP] added rest controller for download api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=ticker-tracker
 
+server.port=8085
+server.servlet.context-path=/ticker-tracker
+
 # datasource properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/nsedata
 spring.datasource.username=postgres
