--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <postgresql.version>42.7.3</postgresql.version>
         <selenium.version>4.18.1</selenium.version>
         <junit.version>5.10.2</junit.version>
+        <slf4j.version>2.0.12</slf4j.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <maven-compiler.version>3.13.0</maven-compiler.version>
@@ -77,6 +78,13 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
 
     </dependencies>
