--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ticker-tracker
 
+# rest services properties
 server.port=8085
 server.servlet.context-path=/ticker-tracker
 
@@ -8,3 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/nsedata
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+# download properties
+nse.download.path=/Users/srimantasahu/Downloads/
+nse.download.wait.timeout=30000
+nse.download.poll.interval=100
