added error handling for instrument data scrapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.datasource.password=password
 # download properties
 nse.download.path=/Users/srimantasahu/Downloads/
 nse.download.wait.timeout=30000
-nse.download.poll.interval=100
+nse.download.poll.interval=500
+
+# extraction properties
+nse.extract.wait.timeout=2000
+nse.extract.poll.interval=100
