--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 # download properties
 nse.download.path=/Users/srimantasahu/Downloads/
-nse.download.wait.timeout=5000
+nse.download.sleep.time=5000
+nse.download.wait.timeout=10000
 nse.download.poll.interval=500
 # extraction properties
+nse.extract.sleep.time=3000
 nse.extract.wait.timeout=5000
-nse.extract.poll.interval=500
+nse.extract.poll.interval=100
