refactored saved inst count logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ nse.download.poll.interval=500
 nse.extract.sleep.time=3000
 nse.extract.wait.timeout=2000
 nse.extract.poll.interval=100
+nse.driver.reuse.count=51
