added updated interval for instruments refresh

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ nse.extract.sleep.time=3000
 nse.extract.wait.timeout=2000
 nse.extract.poll.interval=100
 nse.driver.reuse.count=51
+# refresh properties
+nse.refresh.interval.mins=120
