--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ nse.extract.poll.interval=100
 nse.driver.reuse.count=51
 # refresh properties
 nse.refresh.interval.mins=120
+# reload properties
+nse.reload.interval.mins=15
