--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.indvest.stocks</groupId>
     <artifactId>ticker-tracker</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>ticker-tracker</name>
     <description>Project for Ticker tracking</description>
 
