added category for storing sme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/nsedata
 spring.datasource.username=postgres
 spring.datasource.password=password
 # download properties
+equity.market.url=https://www.nseindia.com/market-data/live-equity-market?symbol=
+sme.market.url=https://www.nseindia.com/market-data/sme-market
 nse.download.path=/Users/srimantasahu/Downloads/
 nse.download.sleep.time=5000
-nse.download.wait.timeout=10000
+nse.download.wait.timeout=60000
 nse.download.poll.interval=500
 # extraction properties
 nse.extract.sleep.time=3000
